@@ -1,3 +1,9 @@
+13-04-2005 Qball <qball@qballcow.nl>
+	* src/playlist3.c:	Implemented xmms like search in playlist..
+	(tokenized non case sens.)
+	* libmpd.c:		Implemented Client side sorting of artists
+	(for old mpd users.. needs testing
+
 11-04-2005 Qball <Qball@qballcow.nl>
 	* src/playlist3.c:	Implemented auto-scroll to playiing song.
 	* src/playlist3.c:	fixed height mode implemented..  need testing.
